--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
     "ext-ctype": "*",
     "phpdevcommunity/relational-query": "^1.0",
     "phpdevcommunity/php-console": "^1.0",
-    "phpdevcommunity/michel-package-starter": "^1.0"
+    "phpdevcommunity/michel-package-starter": "^1.0",
+    "phpdevcommunity/php-filesystem": "^1.0"
   },
   "require-dev": {
     "phpdevcommunity/unitester": "^0.1.0@alpha"
