add auto-handling of createdAt/updatedAt timestamps

--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
     "phpdevcommunity/php-console": "^1.0",
     "phpdevcommunity/michel-package-starter": "^1.0",
     "phpdevcommunity/php-filesystem": "^1.0",
-    "psr/log": "^1.1|^2.0|^3.0"
+    "psr/log": "^1.1|^2.0|^3.0",
+    "phpdevcommunity/psr14-event-dispatcher": "^1.0"
   },
   "require-dev": {
     "phpdevcommunity/unitester": "^0.1.0@alpha"
